# corim-appraisal

./: BUILD.bazel  LICENSE  MODULE.bazel  stackage_snapshot.json
src/: Appraisal.hs
