# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
)

# haskell_toolchain_library can access builtin GHC packages
# and assign them a bazel target name, so that they
# can be referenced as dependencies.
haskell_toolchain_library(name = "base")

# You can add your own libraries with haskell_library.
haskell_library(
    name = "Appraisal",
   src_strip_prefix = "src",
    srcs = [
        "src/Appraisal.hs",
    ],
    deps = [":base",
            "@stackage//:bytestring",
            "@stackage//:hashable",
            "@stackage//:unordered-containers",
            "@stackage//:utf8-string",
            "@stackage//:uuid",
            "@stackage//:network-uri",
            ],
)
